automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<!-- Write your HTML in this file -->
-
+<!doctype html> 
+<html>
+  <head>
+    <title>Kode With Klossy</title>
+  </head>
+  
+  <body>
+    <a href=
+  </body>
+</html>
