--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   
   <body>
-    <a href=https://www.kodewithklossy.com/
+    <a href="https://www.kodewithklossy.com/">Kode With Klossy</a>
   </body>
 </html>
